# Token-Tamagotchi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: codex_app_server.rs  diagnostics.rs  local_codex.rs  mod.rs  pet.rs  quota.rs  settings.rs  window.rs
apps/desktop/src-tauri/src/state/: app_state.rs
crates/codex-adapter/: Cargo.toml
crates/codex-adapter/src/: lib.rs  manual_provider.rs  mock_provider.rs  parser.rs  provider.rs
crates/codex-adapter/tests/: parser_tests.rs
crates/local-store/: Cargo.toml
crates/local-store/migrations/: 0001_init.sql
crates/local-store/src/: db.rs  lib.rs
crates/token-core/: Cargo.toml
crates/token-core/src/: lib.rs  models.rs  mood_engine.rs  quota_engine.rs
crates/token-core/tests/: mood_engine_tests.rs
docs/: architecture.md  data-sources.md  database.md  development-guide.md  mvp-acceptance-checklist.md  parser-contract.md  prd.md  product-blueprint.md  roadmap.md  v0.2-acceptance-checklist.md  v0.3-acceptance-checklist.md  v0.4-release-checklist.md
docs/assets/screenshots/: README.md
fixtures/codex/status/: status-basic.txt  status-unknown-format.txt  status-window-reset.txt  status-with-context.txt  (+2 more)
skins/: skin.schema.json
skins/default/: README.md  manifest.json
(+17 files in other folders)
