[package]
name = "token-tamagotchi-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "token_tamagotchi_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
codex-adapter = { path = "../../../crates/codex-adapter" }
local-store = { path = "../../../crates/local-store" }
token-core = { path = "../../../crates/token-core" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
